RESOLVED FIXED147494
ImageBufferDataCG should not add IOSurfaces to the pool
https://bugs.webkit.org/show_bug.cgi?id=147494
Summary ImageBufferDataCG should not add IOSurfaces to the pool
Chris Dumez
Reported 2015-07-31 11:33:28 PDT
ImageBufferDataCG should not add IOSurfaces to the pool as it is not safe. IOSurfaceIsInUse() does not return accurate result for those surfaces. This is a partial revert of <http://trac.webkit.org/changeset/181301>.
Attachments
Patch (2.43 KB, patch)
2015-07-31 11:35 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-07-31 11:35:22 PDT
Chris Dumez
Comment 2 2015-07-31 14:16:47 PDT
Comment on attachment 257936 [details] Patch Clearing flags on attachment: 257936 Committed r187681: <http://trac.webkit.org/changeset/187681>
Chris Dumez
Comment 3 2015-07-31 14:16:52 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 4 2015-07-31 14:19:19 PDT
Note You need to log in before you can comment on or make changes to this bug.