ImageBufferDataCG should not add IOSurfaces to the pool https://bugs.webkit.org/show_bug.cgi?id=147494

Reviewed by Tim Horton.

ImageBufferDataCG should not add IOSurfaces to the pool as it is not
safe. IOSurfaceIsInUse() does not return accurate result for those
surfaces.

This is a partial revert of r181301.

* platform/graphics/cg/ImageBufferDataCG.cpp:
(WebCore::ImageBufferData::~ImageBufferData): Deleted.
* platform/graphics/cg/ImageBufferDataCG.h:

Canonical link: https://commits.webkit.org/165578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187681 268f45cc-cd09-0410-ab3c-d52691b4dbfc